--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <li><a href="2.html"> 학교소개</a></li>
         <li><a href="3.html"> 동아리소개 </a></li>
     </ol>
-    <img src="./img/캡처.PNG" class="profit">
+    <img src="캡처.PNG" class="profit">
 </body>
 </html>
