--- a/1.html
+++ b/1.html
@@ -14,7 +14,7 @@
         <li><a href="3.html"> 동아리소개 </a></li>
     </ol>
     <div style="width: 300px; margin:20px ;">
-        <img src="./img/1711762972849.jpg" class="profile">
+        <img src="1711762972849.jpg" class="profile">
         <h3 class="name">김성재</h3>
         <p class="content">매천고 2학년 6반</p>
         <p>안녕하세요 저는 김성재 입니다. 저의 취미는 독서입니다 
