--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <h1><a href="index.html">HOME</a></h1>
-    <ol>
-        <li><a href="1.html">자기소개</a></li>
-        <li><a href="2.html"> 학교소개</a></li>
-        <li><a href="3.html"> 동아리소개 </a></li>
-    </ol>
-    <img src="캡처.PNG">
+    <div id="grid">
+        <ol>
+            <li><a href="1.html">자기소개</a></li>
+            <li><a href="2.html"> 학교소개</a></li>
+            <li><a href="3.html"> 동아리소개 </a></li>
+        </ol>
+    
+        <img src="./img/캡처.PNG" class="profit">
+    </div>
+
 </body>
 </html>
