--- a/2.html
+++ b/2.html
@@ -8,19 +8,24 @@
 </head>
 <body>
     <h1><a href="index.html">HOME</a></h1>
-    <ol>
-        <li><a href="1.html">자기소개</a></li>
-        <li><a href="2.html"> 학교소개</a></li>
-        <li><a href="3.html"> 동아리소개 </a></li>
-    </ol>
-    <img src="./img/logo.webp"> <img src="./img/2022-03-17.png" style="width: 300px;">
-    <P> <h1>매천고등학교</h1>
-        <h2>"매일 천개의 꿈을 영끄는 고픔격 학교"</h2> 
-    </P>
-    <a>위치: 대구광역시 북구 매천로 70</a>
-    <P>
-        <a href="https://maecheon.dge.hs.kr/maecheonh/main.do" target="_blank"> 매천고 홈페이지 바로가기</a>
-        <-----
-    </P>
+    <div id="grid">
+        <ol>
+            <li><a href="1.html">자기소개</a></li>
+            <li><a href="2.html"> 학교소개</a></li>
+            <li><a href="3.html"> 동아리소개 </a></li>
+        </ol>
+        <div style="width: 300px;">
+            <img src="./img/logo.webp"> 
+            <img src="./img/2022-03-17.png" style="width: 300px;">
+            <P> <h2>매천고등학교</h2>
+                <h2>"매일 천개의 꿈을 영끄는 고픔격 학교"</h2> 
+            </P>
+            <a>위치: 대구광역시 북구 매천로 70</a>
+            <P>
+                <a href="https://maecheon.dge.hs.kr/maecheonh/main.do" target="_blank"> 매천고 홈페이지 바로가기</a>
+                <-----
+            </P>
+        </div>
+    </div>
 </body>
 </html>
