--- a/2.html
+++ b/2.html
@@ -15,8 +15,8 @@
             <li><a href="3.html"> 동아리소개 </a></li>
         </ol>
         <div style="width: 300px;">
-            <img src="./img/logo.webp"> 
-            <img src="./img/2022-03-17.png" style="width: 300px;">
+            <img src="logo.webp"> 
+            <img src="2022-03-17.png" style="width: 300px;">
             <P> <h2>매천고등학교</h2>
                 <h2>"매일 천개의 꿈을 영끄는 고픔격 학교"</h2> 
             </P>
