--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="3.html"> 동아리소개 </a></li>
         </ol>
     
-        <img src="./img/캡처.PNG" class="profit">
+        <img src="캡처.PNG" class="profit">
     </div>
 
 </body>
